# dataviz-notebooks

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml
data/: read_sample.csv
data/week_2/: nobel_prize_data_cleaned.tsv
data/week_6/: loc_data.txt
week_1/: intro-colab-python.ipynb  intro-to-numpy-and-pandas.ipynb  intro-to-numpy-pandas.ipynb  intro-to-numpy.ipynb  intro-to-pandas.ipynb  intro-to-python.ipynb  intro_colab_python.ipynb  pandas-exercises.ipynb  pandas-tutorial.ipynb  python-tutorial.ipynb  python_tutorial.ipynb
week_2/: COVID-19.ipynb  intro-to-matplotlib-taoka.ipynb  intro-to-matplotlib.ipynb  intro-to-pandas.ipynb  intro-to-plotly.ipynb  intro-to-preprocessing.ipynb  matplotlib-exercises.ipynb  nobel-laureates.ipynb  pandas-exercises.ipynb  python-review.ipynb  sample_df.csv
week_3/: altair-exercises.ipynb  altiar-exercises.ipynb  encoding-with-altair.ipynb  intro-to-altair.ipynb  intro-to-exploratory-analysis.ipynb  pandas-review.ipynb
week_4/: intro-to-plotly.ipynb  intro-to-visualizing-quantitative-and-qualitative-data.ipynb  intro-to-visualizing-quantitative-data.ipynb  qualitative-data-exercises.ipynb  quantitative-and-qualitative-data-exercises.ipynb  using-altair-to-recreate-manga-plots.ipynb
week_5/: api-tutorial.ipynb  intro-to-nlp.ipynb  intro-to-visualizing-text-data.ipynb  network.html  text-data-exercises.ipynb  web-scraping.ipynb
week_5/data/: pref_data.txt
week_6/: api-tutorial.ipynb  episodes.tsv  final-project.ipynb  pref_data.txt  python-review-py5.ipynb  web-scraping.ipynb  word2vec.ipynb
(+8 files in other folders)
