[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Shin Chu <shushinjo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.2"
numpy = "^1.22.4"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
altair = "^4.2.0"
altair-saver = "^0.5.0"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
vega-datasets = "^0.9.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
